src/v8/CAPI_Monitors.pas


//------------------------------------------------------------------------------
function Monitors_Get_SampleCount():Integer;cdecl;
Var
   pMon:TMonitorObj;
begin
     If ActiveCircuit[ActiveActor] <> Nil Then Begin
         pMon := ActiveCircuit[ActiveActor].Monitors.Active;
         Result := pMon.SampleCount;
     End;
end;
//------------------------------------------------------------------------------
procedure Monitors_SampleAll();cdecl;
begin
     If ActiveCircuit[ActiveActor] <> Nil Then Begin
         MonitorClass[ActiveActor].SampleAll(ActiveActor);
     End;
end;
//------------------------------------------------------------------------------
procedure Monitors_SaveAll();cdecl;
begin
     If ActiveCircuit[ActiveActor] <> Nil Then Begin
         MonitorClass[ActiveActor].SaveAll(ActiveActor);
     End;
end;
//------------------------------------------------------------------------------
function Monitors_Get_Count():Integer;cdecl;
begin
    If ActiveCircuit[ActiveActor] <> Nil Then Begin
         Result := ActiveCircuit[ActiveActor].Monitors.ListSize;
     End;
end;
//------------------------------------------------------------------------------
procedure Monitors_Process();cdecl;
var
  pMon:TMonitorObj;
begin
  if ActiveCircuit[ActiveActor] <> Nil then begin
    pMon := ActiveCircuit[ActiveActor].Monitors.Active;
    if PMon <> Nil then pMon.PostProcess(ActiveActor);
  end;
end;
//------------------------------------------------------------------------------
procedure Monitors_ProcessAll();cdecl;
begin
  If ActiveCircuit[ActiveActor] <> Nil Then Begin
    MonitorClass[ActiveActor].PostProcessAll(ActiveActor);
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE Monitors_Get_Channel(var ResultPtr: PDouble; ResultCount: PInteger; Index: Integer);cdecl;
// Return an array of doubles for selected channel
VAR
  Result: PDoubleArray;  Header : THeaderRec;
     k , i : Integer;
     FirstCol : String;
     pMon : TMonitorObj;
     SngBuffer : pSingleArray;
     hr : Single;
     s  : Single;
     AllocSize : Integer;

begin

    If ActiveCircuit[ActiveActor] <> Nil Then Begin

      pMon := ActiveCircuit[ActiveActor].Monitors.Active;
      If pMon.SampleCount >0 Then Begin

             Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (pMon.SampleCount-1) + 1);
             ReadMonitorHeader(Header, FALSE);   // FALSE = leave at beginning of data
             AuxParser.CmdString := string(Header.StrBuffer);
             AuxParser.AutoIncrement := TRUE;
             FirstCol := AuxParser.StrValue;  // Get rid of first two columns
             AuxParser.AutoIncrement := FALSE;

              AllocSize :=  Sizeof(Single) * Header.RecordSize;
              SngBuffer := Allocmem(AllocSize);
              k := 0;
              for i := 1 to pMon.SampleCount  do Begin
                   With pMon.MonitorStream Do
                    Begin
                        Read( hr, SizeOf(hr) );
                        Read( s,  SizeOf(s) );
                        Read( sngBuffer^[1], AllocSize);  // read rest of record
                    End;
                    Result[k] := sngBuffer^[index];
                    inc(k);
              End;

              Reallocmem(SngBuffer, 0);  // Dispose of buffer

      End
      Else   Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);

    End;
end;
PROCEDURE Monitors_Get_Channel_GR(Index: Integer);cdecl;
// Same as Monitors_Get_Channel but uses global result (GR) pointers
begin
   Monitors_Get_Channel(GR_DataPtr_PDouble, GR_CountPtr_PDouble, Index)
end;

//------------------------------------------------------------------------------
PROCEDURE Monitors_Get_dblFreq(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
// Return an array of doubles for frequence for Harmonic solutions
VAR
  Result: PDoubleArray;  Header : THeaderRec;
     k , i : Integer;
     FirstCol : String;
     pMon : TMonitorObj;
     SngBuffer : pSingleArray;
     freq : Single;
     s  : Single;
     AllocSize : Integer;

begin

    If ActiveCircuit[ActiveActor] <> Nil Then Begin

      pMon := ActiveCircuit[ActiveActor].Monitors.Active;
      If pMon.SampleCount >0 Then Begin
             Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (pMon.SampleCount-1) + 1);
             ReadMonitorHeader(Header, FALSE);   // leave at beginning of data
             AuxParser.CmdString := string(Header.StrBuffer);
             AuxParser.AutoIncrement := TRUE;
             FirstCol := AuxParser.StrValue;  // Get rid of first two columns
             AuxParser.AutoIncrement := FALSE;
             // check first col to see if it is "Freq" for harmonics solution
             If Sysutils.CompareText(FirstCol, 'freq') = 0  Then Begin
                  AllocSize :=  Sizeof(Single) * Header.RecordSize;
                  SngBuffer := Allocmem(AllocSize);
                  k := 0;
                  for i := 1 to pMon.SampleCount  do Begin
                       With pMon.MonitorStream Do
                        Begin
                            Read( freq, SizeOf(freq) );  // frequency
                            Read( s,  SizeOf(s) );   // harmonic
                            Read( sngBuffer^[1], AllocSize);  // read rest of record
                        End;
                        Result[k] := freq;
                        inc(k);
                  End;

                  Reallocmem(SngBuffer, 0);  // Dispose of buffer

             End Else Begin   // Not harmonic solution, so return nil array
                Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
                pMon.MonitorStream.Seek(0, soFromEnd) ; // leave stream at end
             End;
      End
      Else   Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);

    End;

end;
PROCEDURE Monitors_Get_dblFreq_GR();cdecl;
// Same as Monitors_Get_dblFreq but uses global result (GR) pointers
begin
   Monitors_Get_dblFreq(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
PROCEDURE Monitors_Get_dblHour(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
// Return an array of doubles for time in hours
VAR
  Result: PDoubleArray;  Header : THeaderRec;
     k , i : Integer;
     FirstCol : String;
     pMon : TMonitorObj;
     SngBuffer : pSingleArray;
     hr : Single;
     s  : Single;
     AllocSize : Integer;

begin

    If ActiveCircuit[ActiveActor] <> Nil Then Begin

      pMon := ActiveCircuit[ActiveActor].Monitors.Active;
      If pMon.SampleCount >0 Then Begin
             Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (pMon.SampleCount-1) + 1);
             ReadMonitorHeader(Header, FALSE);   // leave at beginning of data
             AuxParser.CmdString := string(Header.StrBuffer);
             AuxParser.AutoIncrement := TRUE;
             FirstCol := AuxParser.StrValue;  // Get rid of first two columns
             AuxParser.AutoIncrement := FALSE;
             // check first col to see if it is "Hour"
             If Sysutils.CompareText(FirstCol, 'hour') = 0  Then Begin
                  AllocSize :=  Sizeof(Single) * Header.RecordSize;
                  SngBuffer := Allocmem(AllocSize);
                  k := 0;
                  for i := 1 to pMon.SampleCount  do Begin
                       With pMon.MonitorStream Do
                        Begin
                            Read( hr, SizeOf(hr) );  // Hour
                            Read( s,  SizeOf(s) );   // Seconds past the hour
                            Read( sngBuffer^[1], AllocSize);  // read rest of record
                        End;
                        Result[k] := hr + s / 3600.0;
                        inc(k);
                  End;

                  Reallocmem(SngBuffer, 0);  // Dispose of buffer

             End Else Begin   // Not time solution, so return nil array
                Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
                pMon.MonitorStream.Seek(0, soFromEnd) ; // leave stream at end
             End;
      End
      Else   Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);

    End;

end;
PROCEDURE Monitors_Get_dblHour_GR();cdecl;
// Same as Monitors_Get_dblHour but uses global result (GR) pointers
begin
   Monitors_Get_dblHour(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
function Monitors_Get_FileVersion():Integer;cdecl;
Var  Header : THeaderRec;
begin
    If ActiveCircuit[ActiveActor] <> Nil Then Begin

       Result := Header.Version;
    End;

end;
//------------------------------------------------------------------------------
PROCEDURE Monitors_Get_Header(var ResultPtr: PPAnsiChar; ResultCount: PInteger);cdecl;
// Variant list of strings with names of all channels
VAR
  Result: PPAnsiCharArray;  Header : THeaderRec;
     k : Integer;
     ListSize : Integer;
     SaveDelims : String;
     SaveWhiteSpace : String;
begin

    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, (0) + 1);
    Result[0] := DSS_CopyStringAsPChar('NONE');
    IF ActiveCircuit[ActiveActor] <> Nil THEN
     WITH ActiveCircuit[ActiveActor] DO
     Begin
         ReadMonitorHeader(Header, TRUE);
         If Header.RecordSize > 0 Then
         Begin
             ListSize := Header.RecordSize;
             DSS_RecreateArray_PPAnsiChar(Result, ResultPtr, ResultCount, (ListSize-1) + 1);
             k:=0;
             SaveDelims := AuxParser.Delimiters;
             AuxParser.Delimiters := ',';
             SaveWhiteSpace := AuxParser.Whitespace;
             AuxParser.Whitespace := '';
             AuxParser.CmdString := String(Header.StrBuffer);
             AuxParser.AutoIncrement := TRUE;
             AuxParser.StrValue;  // Get rid of first two columns
             AuxParser.StrValue;
             WHILE k < ListSize DO Begin
                Result[k] := DSS_CopyStringAsPChar(AuxParser.StrValue);
                Inc(k);
             End;
             AuxParser.AutoIncrement := FALSE; // be a good citizen
             AuxParser.Delimiters := SaveDelims;
             AuxParser.Whitespace := SaveWhiteSpace;
         End;
     End;

end;
PROCEDURE Monitors_Get_Header_GR();cdecl;
// Same as Monitors_Get_Header but uses global result (GR) pointers
begin
   Monitors_Get_Header(GR_DataPtr_PPAnsiChar, GR_CountPtr_PPAnsiChar)
end;

//------------------------------------------------------------------------------
function Monitors_Get_NumChannels():Integer;cdecl;
Var  Header:THeaderRec;
begin

    If ActiveCircuit[ActiveActor] <> Nil Then Begin
        ReadMonitorHeader(Header, TRUE);
        Result := Header.RecordSize;
    End;
end;
//------------------------------------------------------------------------------
function Monitors_Get_RecordSize():Integer;cdecl;
Var  Header:THeaderRec;
begin

    If ActiveCircuit[ActiveActor] <> Nil Then Begin
        ReadMonitorHeader(Header, TRUE);
        Result := Header.RecordSize;
    End;
end;
//------------------------------------------------------------------------------
function Monitors_Get_Element_AnsiString():AnsiString;inline;
var
  pMon:TMonitorObj;
begin
  if ActiveCircuit[ActiveActor] <> Nil then begin
    pMon := ActiveCircuit[ActiveActor].Monitors.Active;
    if PMon <> Nil then Result := pMon.ElementName ;
  end;
end;
